fixed: menu overflowing at page top

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -16,6 +16,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: -1;
 
     transform: translateY(-100%);
     @include transitions(transform);
